maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:10: error: ';' expected but '=' found.
                {(a,b)=(i,j);setIndication(i,j,0)}}}
                      ^ShortestPathMaze:17: error: identifier expected but '(' found.
def avance ( (x:Int,y:Int))  {
             ^ShortestPathMaze:37: error: ':' expected but '}' found.
}
^